question and answers model, api and seeder
